feat: implement GUID-based logging system for Copilot instructions and update MCP server handling

--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -2,12 +2,12 @@
     "name": "@bctb/mcp",
     "version": "0.1.0",
     "description": "MCP backend server for BC Telemetry Buddy",
-    "type": "module",
+    "type": "commonjs",
     "main": "./dist/server.js",
     "types": "./dist/server.d.ts",
     "scripts": {
-        "build": "esbuild src/server.ts --bundle --outfile=dist/server.js --platform=node --format=esm --sourcemap --minify --external:fsevents",
-        "dev": "esbuild src/server.ts --bundle --outfile=dist/server.js --platform=node --format=esm --sourcemap --watch",
+        "build": "esbuild src/server.ts --bundle --outfile=dist/server.js --platform=node --format=cjs --sourcemap --minify --external:fsevents",
+        "dev": "esbuild src/server.ts --bundle --outfile=dist/server.js --platform=node --format=cjs --sourcemap --watch",
         "compile": "tsc --noEmit",
         "start": "node dist/server.js",
         "test": "jest",
