--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -423,7 +423,7 @@
         "test": "jest",
         "test:coverage": "jest --coverage",
         "test:integration": "npm run build && node ./dist/test/runTest.js",
-        "copy-mcp": "node -e \"const fs=require('fs');const path=require('path');const targetDir=path.join(__dirname,'mcp','dist');fs.mkdirSync(targetDir,{recursive:true});fs.copyFileSync(path.join(__dirname,'..','mcp','dist','server.js'),path.join(targetDir,'server.js'));console.log('Copied MCP server bundle to extension/mcp/dist/server.js')\"",
+        "copy-mcp": "node -e \"const fs=require('fs');const path=require('path');const targetDir=path.join(__dirname,'mcp','dist');fs.mkdirSync(targetDir,{recursive:true});fs.copyFileSync(path.join(__dirname,'..','mcp','dist','server.js'),path.join(targetDir,'server.js'));try{fs.copyFileSync(path.join(__dirname,'..','mcp','dist','server.cjs'),path.join(targetDir,'server.cjs'));}catch(e){}console.log('Copied MCP server bundle to extension/mcp/dist/server.js and server.cjs')\"",
         "package": "vsce package",
         "clean": "rimraf dist out mcp"
     },
