fix: rename server.cjs to launcher.js to fix VSIX installation
- Renamed MCP launcher from server.cjs to launcher.js to work around VSCode/vsce not extracting .cjs files from VSIX
- Updated extension spawn paths to use launcher.js
- Updated copy-mcp script to copy launcher.js
- All 311 tests passing
- CHANGELOGs updated for both packages

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -423,7 +423,7 @@
         "test": "jest",
         "test:coverage": "jest --coverage",
         "test:integration": "npm run build && node ./dist/test/runTest.js",
-        "copy-mcp": "node -e \"const fs=require('fs');const path=require('path');const targetDir=path.join(__dirname,'mcp','dist');fs.mkdirSync(targetDir,{recursive:true});fs.copyFileSync(path.join(__dirname,'..','mcp','dist','server.js'),path.join(targetDir,'server.js'));try{fs.copyFileSync(path.join(__dirname,'..','mcp','dist','server.cjs'),path.join(targetDir,'server.cjs'));}catch(e){}console.log('Copied MCP server bundle to extension/mcp/dist/server.js and server.cjs')\"",
+        "copy-mcp": "node -e \"const fs=require('fs');const path=require('path');const targetDir=path.join(__dirname,'mcp','dist');fs.mkdirSync(targetDir,{recursive:true});fs.copyFileSync(path.join(__dirname,'..','mcp','dist','server.js'),path.join(targetDir,'server.js'));try{fs.copyFileSync(path.join(__dirname,'..','mcp','dist','launcher.js'),path.join(targetDir,'launcher.js'));}catch(e){}console.log('Copied MCP server bundle to extension/mcp/dist/server.js and launcher.js')\"",
         "package": "vsce package",
         "clean": "rimraf dist out mcp"
     },
