fix: create launcher.js as source file to ensure CI/CD packaging
- Created packages/mcp/launcher.js as source file (not build artifact)
- Updated MCP build script to copy launcher.js to dist/ after esbuild
- Fixed copy-mcp script to fail loudly if launcher.js doesn't exist (removed silent try/catch)
- All 311 tests passing
- CHANGELOGs updated

Root cause: launcher.js was only in gitignored dist/ folder, so CI/CD builds never had it.
The copy-mcp script silently failed (empty catch block) and still reported success.

--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -6,7 +6,7 @@
     "main": "./dist/server.js",
     "types": "./dist/server.d.ts",
     "scripts": {
-        "build": "esbuild src/server.ts --bundle --outfile=dist/server.js --platform=node --format=cjs --sourcemap --minify --external:fsevents",
+        "build": "esbuild src/server.ts --bundle --outfile=dist/server.js --platform=node --format=cjs --sourcemap --minify --external:fsevents && node -e \"require('fs').copyFileSync('launcher.js', 'dist/launcher.js')\"",
         "dev": "esbuild src/server.ts --bundle --outfile=dist/server.js --platform=node --format=cjs --sourcemap --watch",
         "compile": "tsc --noEmit",
         "start": "node dist/server.js",
