--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -428,18 +428,19 @@
         "clean": "rimraf dist out mcp"
     },
     "dependencies": {
+        "@azure/msal-node": "^3.8.0",
         "axios": "^1.6.0"
     },
     "devDependencies": {
+        "@types/jest": "^30.0.0",
+        "@types/node": "^22.18.11",
         "@types/vscode": "^1.85.0",
-        "@types/node": "^18.0.0",
-        "@types/jest": "^29.5.0",
         "@vscode/test-electron": "^2.3.0",
-        "jest": "^29.7.0",
-        "ts-jest": "^29.1.0",
-        "typescript": "^5.3.0",
         "@vscode/vsce": "^3.2.1",
         "esbuild": "^0.24.0",
-        "rimraf": "^6.0.1"
+        "jest": "^29.7.0",
+        "rimraf": "^6.0.1",
+        "ts-jest": "^29.1.0",
+        "typescript": "^5.3.0"
     }
 }
