--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -16,19 +16,19 @@
         "clean": "rimraf dist"
     },
     "dependencies": {
-        "express": "^4.18.2",
+        "@azure/msal-node": "^3.8.0",
         "axios": "^1.6.0",
-        "@azure/msal-node": "^2.6.0",
+        "express": "^4.18.2",
         "lru-cache": "^10.1.0"
     },
     "devDependencies": {
         "@types/express": "^4.17.21",
-        "@types/node": "^18.0.0",
-        "typescript": "^5.3.0",
-        "jest": "^29.7.0",
-        "@types/jest": "^29.5.0",
-        "ts-jest": "^29.1.0",
+        "@types/jest": "^30.0.0",
+        "@types/node": "^22.18.11",
+        "esbuild": "^0.24.0",
+        "jest": "^30.2.0",
         "rimraf": "^6.0.1",
-        "esbuild": "^0.24.0"
+        "ts-jest": "^29.4.5",
+        "typescript": "^5.3.0"
     }
 }
