feat: enhance documentation and testing for Phase 1-3 changes, including manual testing guide and MCP server error fix

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -417,7 +417,7 @@
     },
     "scripts": {
         "vscode:prepublish": "npm run build && npm run copy-mcp",
-        "build": "esbuild src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node --sourcemap --minify",
+        "build": "esbuild src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node --sourcemap --minify && npm run copy-mcp",
         "dev": "esbuild src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node --sourcemap --watch",
         "compile": "tsc --noEmit",
         "test": "jest",
