--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -213,9 +213,10 @@
         "build": "esbuild src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node --sourcemap --minify && npm run copy-mcp",
         "dev": "esbuild src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node --sourcemap --watch",
         "compile": "tsc --noEmit",
+        "compile-tests": "tsc -p ./ --outDir dist",
         "test": "jest",
         "test:coverage": "jest --coverage",
-        "test:integration": "npm run build && node ./dist/test/runTest.js",
+        "test:integration": "npm run build && npm run compile-tests && node ./dist/test/runTest.js",
         "copy-mcp": "node -e \"const fs=require('fs');const path=require('path');const targetDir=path.join(__dirname,'mcp','dist');fs.mkdirSync(targetDir,{recursive:true});fs.copyFileSync(path.join(__dirname,'..','mcp','dist','server.js'),path.join(targetDir,'server.js'));fs.copyFileSync(path.join(__dirname,'..','mcp','dist','launcher.js'),path.join(targetDir,'launcher.js'));console.log('Copied MCP server bundle to extension/mcp/dist/')\"",
         "package": "vsce package",
         "clean": "rimraf dist out mcp"
