Refactor chatmode installation to support multiple chatmodes
Added an example for chatmode for performance analysis

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -92,8 +92,8 @@
                 "title": "BC Telemetry Buddy: Show Cache Statistics"
             },
             {
-                "command": "bctb.installChatmode",
-                "title": "BC Telemetry Buddy: Install Chatmode"
+                "command": "bctb.installChatmodes",
+                "title": "BC Telemetry Buddy: Install Chatmodes"
             }
         ],
         "mcpServerDefinitionProviders": [
