First commit - Architectural redesign to transform BC Telemetry Buddy into a modular monorepo with a shared core library (@bctb/shared), a standalone NPM-published MCP server for AI integrations, and an independent VSCode extension that works with or without the MCP server, featuring multi-profile support for managing multiple customer telemetry endpoints.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Query Business Central telemetry from VSCode with natural language using MCP and GitHub Copilot",
     "private": true,
     "workspaces": [
+        "packages/shared",
         "packages/mcp",
         "packages/extension"
     ],
