--- a/packages/extension/tsconfig.json
+++ b/packages/extension/tsconfig.json
@@ -10,6 +10,11 @@
         ],
         "sourceMap": true
     },
+    "references": [
+        {
+            "path": "../shared"
+        }
+    ],
     "include": [
         "src/**/*"
     ],
