--- a/packages/mcp/tsconfig.json
+++ b/packages/mcp/tsconfig.json
@@ -1,11 +1,17 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "module": "ES2022",
-        "moduleResolution": "bundler",
+        "composite": true,
+        "module": "CommonJS",
+        "moduleResolution": "node",
         "outDir": "./dist",
         "rootDir": "./src"
     },
+    "references": [
+        {
+            "path": "../shared"
+        }
+    ],
     "include": [
         "src/**/*"
     ],
