refactor: remove cache, event lookup, kusto, queries, references, and sanitize modules
- Deleted CacheService and its related file-based caching logic.
- Removed EventCategoryInfo and event lookup functionalities.
- Eliminated KustoService for executing KQL queries against Azure Data Explorer.
- Discarded QueriesService for managing saved KQL query files.
- Removed ReferencesService for fetching queries from external references.
- Deleted sanitization functions for redacting PII from query results.

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -107,6 +107,31 @@
             {
                 "command": "bctb.refreshProfileStatusBar",
                 "title": "BC Telemetry Buddy: Refresh Profile Status Bar"
+            },
+            {
+                "command": "bctb.createProfile",
+                "title": "BC Telemetry Buddy: Create Profile",
+                "icon": "$(add)"
+            },
+            {
+                "command": "bctb.editProfile",
+                "title": "BC Telemetry Buddy: Edit Profile",
+                "icon": "$(edit)"
+            },
+            {
+                "command": "bctb.deleteProfile",
+                "title": "BC Telemetry Buddy: Delete Profile",
+                "icon": "$(trash)"
+            },
+            {
+                "command": "bctb.setDefaultProfile",
+                "title": "BC Telemetry Buddy: Set Default Profile",
+                "icon": "$(star)"
+            },
+            {
+                "command": "bctb.manageProfiles",
+                "title": "BC Telemetry Buddy: Manage Profiles",
+                "icon": "$(settings-gear)"
             }
         ],
         "configuration": {
